# candombe-groove-vst

./: .gitignore  CMakeLists.txt  CMakeLists.wrapper.txt  CMakeLists.wrapper_arm.txt  README.md
PluginCode/: CMakeLists.txt  deploy.h  settings.json
SampleClips/: CandombeTest2Bar.mid  CandombeTest2Bars.mid  CandombeTest8Bars.mid
Source/DeploymentThreads/: DeploymentThread.cpp
Source/Includes/: Configs_Parser.h  GenerationEvent.h  InputEvent.h  MidiDisplayWidget.h  TorchScriptAndPresetLoaders.h
Source/NeuralMidiFXPlugin/: PluginProcessor.cpp  PluginProcessor.h
